Add react app to deploy

--- a/aws-cfcdn-s3/cdk/site-contents/index.html
+++ b/aws-cfcdn-s3/cdk/site-contents/index.html
@@ -3,7 +3,7 @@
     <title>CDK sample</title>
     <script language="JavaScript">
         async function searchForResults(searchTerm) {
-            let response = await fetch('https://gxjpfjttea.execute-api.eu-west-1.amazonaws.com/prod/?q=' + encodeURI(searchTerm));
+            let response = await fetch('https://qke0rtmpb0.execute-api.eu-west-1.amazonaws.com/prod/?q=' + encodeURI(searchTerm));
             let data = await response.json();
             return data;
         }
